Implemented OAuth authentication

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -10,3 +10,6 @@ eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
 eureka.client.instance.preferIpAddress = true
 
 management.endpoints.web.exposure.include=*
+
+oauth.server.url = http://localhost:9690
+oauth.server.client-id = service or app client Id that was encrypted with RSA private key during app setup. It will be decrypted then use to search for the app on auth server
