Implemented Customer permission

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -14,3 +14,4 @@ management.endpoints.web.exposure.include=*
 oauth.jwt.secret = +KbPdSgVkYp3s6v9y$B&E)H@McQfThWm
 oauth.server.url = http://localhost:9690
 oauth.server.client-id = service or app client Id that was encrypted with RSA private key during app setup. It will be decrypted then use to search for the app on auth server
+oauth.jwt.duration.expiry = 2
