Implemented messaging notification

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -15,3 +15,16 @@ oauth.jwt.secret = +KbPdSgVkYp3s6v9y$B&E)H@McQfThWm
 oauth.server.url = http://localhost:9690
 oauth.server.client-id = service or app client Id that was encrypted with RSA private key during app setup. It will be decrypted then use to search for the app on auth server
 oauth.jwt.duration.expiry = 2
+
+sms.sender = 08075649462
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=enenim2000@gmail.com
+spring.mail.password=Enenim@4.24
+spring.mail.properties.mail.smtp.auth=true
+# TLS, port 587
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable=true
+# SSL, port 465
+#spring.mail.properties.mail.smtp.socketFactory.port = 465
+#spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
