Change smtp details to mailtrap

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -18,13 +18,12 @@ oauth.jwt.duration.expiry = 2
 
 sms.sender = 08075649462
 
-spring.mail.host=smtp.gmail.com
-spring.mail.username=enenim2000@gmail.com
-spring.mail.password=Enenim@4.24
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.username=6701da879b0d69
+spring.mail.password=570f1455d50f57
 spring.mail.properties.mail.smtp.auth=true
-# TLS, port 587
-spring.mail.port=587
+#25 or 465 or 587 or 2525
+spring.mail.port=2525
 spring.mail.properties.mail.smtp.starttls.enable=true
-# SSL, port 465
 #spring.mail.properties.mail.smtp.socketFactory.port = 465
 #spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
