--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -11,13 +11,14 @@ eureka.client.instance.preferIpAddress = true
 
 management.endpoints.web.exposure.include=*
 
-oauth.jwt.secret = +KbPdSgVkYp3s6v9y$B&E)H@McQfThWm
+oauth.jwt.secret = 97M0dk#rTY*$KmW81Nu+@20IZrWxwZxY09!
 oauth.server.url = http://localhost:9690
 oauth.server.client-id = service or app client Id that was encrypted with RSA private key during app setup. It will be decrypted then use to search for the app on auth server
 oauth.jwt.duration.expiry = 2
 
 sms.sender = 08075649462
-
+transaction.otp.expiry = 10
+verify.otp.expiry = 60
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.username=6701da879b0d69
 spring.mail.password=570f1455d50f57
