--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -16,6 +16,7 @@ oauth.server.url = http://localhost:9690
 oauth.server.client-id = service or app client Id that was encrypted with RSA private key during app setup. It will be decrypted then use to search for the app on auth server
 oauth.jwt.duration.expiry = 2
 
+cron.cache.expiry = 0 */30 * * * ?
 sms.sender = 08075649462
 transaction.otp.expiry = 10
 verify.otp.expiry = 60
